[package]
name = "advent-of-code-rust-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
regex = "1.10.2"
aho-corasick = "1.1.2"
once_cell = "1.18.0"
nom = "7.1.3"
pathfinding = "4.4.0"
